--- a/admin/sidebar.html
+++ b/admin/sidebar.html
@@ -4,7 +4,7 @@
     <img src="theme/images/logo_dark.png" style="width: 2rem;"></img>
     <!-- <i class="fas fa-cube" style="width: 2rem;"></i> -->
   </div>
-  <div class="sidebar-brand-text mx-3">Dashboard</div>
+  <div class="sidebar-brand-text mx-3">LXDWARE</div>
 </a>
 
 <!-- Divider -->
