--- a/admin/certificates.html
+++ b/admin/certificates.html
@@ -138,12 +138,12 @@
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                   <h6 class="m-0 font-weight-bold text-primary">Certificates</h6>
-                  <div class="dropdown no-arrow">
+                  <!-- <div class="dropdown no-arrow">
                     <a class="dropdown-toggle" href="#" data-toggle="modal" data-target="#addCertificateModal">
                       <i class="fas fa-plus fa-sm fa-fw"></i>
                       New Certificate
                     </a>
-                  </div>
+                  </div> -->
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
