--- a/admin/instance.html
+++ b/admin/instance.html
@@ -469,6 +469,35 @@
     </div>
   </div>
 
+  <!-- Create Instance from Snapshot Modal-->
+  <div class="modal fade" id="createInstanceFromSnapshotModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Create Instance from Snapshot</h5>
+            <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">×</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <label class="col-3 col-form-label text-right">Name:</label>
+              <div class="col-9">
+                <div class="form-group">
+                  <input type="text" id="instanceNameForSnapshotCreate" class="form-control" placeholder="Instance name" name="copy">
+                  <input type="hidden" id="snapNameForSnapshotCreate">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+            <a class="btn btn-primary" href="#" onclick="createInstanceFromSnapshot()" data-dismiss="modal">Ok</a>
+          </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Backup Instance Modal-->
   <div class="modal fade" id="backupInstanceModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -1044,6 +1073,28 @@
     var copyName = $("#copyName").val();
     console.log("Info: copying instance " + instanceName + " to " + copyName);
     $.get("./php/lxd/instances.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName) + "&instance=" + encodeURI(instanceName) + "&name=" + encodeURI(copyName) + "&action=copyInstance", function (data) {
+      var operationData = JSON.parse(data);
+      console.log(operationData);
+      if (operationData.status_code == 100 && operationData.metadata.status_code < 400){
+        operationStatusCheck();
+      }
+      if (operationData.metadata.status_code >= 400){
+        alert(operationData.metadata.err);
+      }
+    });
+  }
+
+  function loadCreateInstanceFromSnapshotModal(snap){
+      $("#snapNameForSnapshotCreate").val(snap);
+      $("#createInstanceFromSnapshotModal").modal('show');
+  }
+
+  function createInstanceFromSnapshot(){
+    var copyName = $("#instanceNameForSnapshotCreate").val();
+    var snapName = $("#snapNameForSnapshotCreate").val();
+    var instanceSnapshotName = instanceName + "/" + snapName;
+    console.log("Info: creating instance " + copyName + " from snapshot " + instanceSnapshotName);
+    $.get("./php/lxd/instances.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName) + "&instance=" + encodeURI(instanceSnapshotName) + "&name=" + encodeURI(copyName) + "&action=copyInstance", function (data) {
       var operationData = JSON.parse(data);
       console.log(operationData);
       if (operationData.status_code == 100 && operationData.metadata.status_code < 400){
