--- a/admin/certificates.html
+++ b/admin/certificates.html
@@ -138,12 +138,10 @@
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                   <h6 class="m-0 font-weight-bold text-primary">Certificates</h6>
-                  <!-- <div class="dropdown no-arrow">
-                    <a class="dropdown-toggle" href="#" data-toggle="modal" data-target="#addCertificateModal">
-                      <i class="fas fa-plus fa-sm fa-fw"></i>
-                      New Certificate
-                    </a>
-                  </div> -->
+                  <div class="dropdown no-arrow">
+                    <!--<a class="dropdown-toggle mr-2" href="#" data-toggle="modal" data-target="#addCertificateModal" title="New Certificate" aria-hidden="true">
+                      <i class="fas fa-plus fa-sm fa-fw"></i></a>-->
+                  </div>
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
@@ -321,10 +319,7 @@
   }
 
   function reloadPageContent(){
-    $('#certificateListTable').DataTable().ajax.reload();
-
-    //Set the page content to reload again in 5 more seconds
-    setTimeout(() => { reloadPageContent(); }, 5000);
+    $('#certificateListTable').DataTable().ajax.reload(null, false);
   }
   
   function loadPageContent(){
@@ -353,8 +348,8 @@
     //Check for any running operations
     operationStatusCheck();
 
-    //Set the page content to reload once in 5 seconds
-    setTimeout(() => { reloadPageContent(); }, 5000);
+    //Set the page content to reload in 5 seconds
+    setInterval(() => { reloadPageContent(); }, 5000);
   }
 
   //API uses sync
