--- a/admin/operations.html
+++ b/admin/operations.html
@@ -138,6 +138,8 @@
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                   <h6 class="m-0 font-weight-bold text-primary">Operations</h6>
+                  <div class="dropdown no-arrow">
+                  </div>
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
@@ -285,10 +287,7 @@
   }
 
   function reloadPageContent(){
-    $('#operationListTable').DataTable().ajax.reload();
-
-    //Set the page content to reload again in 5 more seconds
-    setTimeout(() => { reloadPageContent(); }, 5000);
+    $('#operationListTable').DataTable().ajax.reload(null, false);
   }
 
   function loadPageContent(){
@@ -321,8 +320,8 @@
     //Check for any running operations
     operationStatusCheck();
 
-    //Set the page content to reload once in 5 seconds
-    setTimeout(() => { reloadPageContent(); }, 5000);
+    //Set the page content to reload in 3 seconds
+    setInterval(() => { reloadPageContent(); }, 3000);
   }
 
   //Called by Edit action, loads JSON data of project
