--- a/admin/simplestreams.html
+++ b/admin/simplestreams.html
@@ -139,10 +139,8 @@
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                   <h6 class="m-0 font-weight-bold text-primary">Simplestreams</h6>
                   <div class="dropdown no-arrow">
-                    <a class="dropdown-toggle" href="#" data-toggle="modal" data-target="#addSimplestreamsModal">
-                      <i class="fas fa-plus fa-sm fa-fw"></i>
-                      New Simplestreams Host
-                    </a>
+                    <a class="dropdown-toggle mr-2" href="#" data-toggle="modal" data-target="#addSimplestreamsModal" title="New Simplestreams Host" aria-hidden="true">
+                      <i class="fas fa-plus fa-sm fa-fw"></i> Simplestreams Host</a>
                   </div>
                 </div>
                 <!-- Card Body -->
@@ -301,10 +299,7 @@
   }
 
   function reloadPageContent() {
-    $('#simplestreamsListTable').DataTable().ajax.reload();
-
-    //Set the page content to reload again in 5 more seconds
-    setTimeout(() => { reloadPageContent(); }, 5000);
+    $('#simplestreamsListTable').DataTable().ajax.reload(null, false);
   }
 
   function loadPageContent(){
@@ -334,8 +329,8 @@
     //Check for any running operations
     operationStatusCheck();
 
-    //Set the page content to reload once in 5 seconds
-    setTimeout(() => { reloadPageContent(); }, 5000);
+    //Set the page content to reload in 5 seconds
+    setInterval(() => { reloadPageContent(); }, 5000);
   }
 
   function addSimplestreams(){
