--- a/admin/about.html
+++ b/admin/about.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <body>
   <p><strong>About</strong>: The LXD Dashboard by LXDWARE is open source software that provides a web-based user interface for controlling your LXD infrastructure.</p>
-  <p><strong>Version</strong>: 1.2.0</p>
+  <p><strong>Version</strong>: 1.2.1</p>
   <p><strong>License</strong>: GPL-3.0</p>
-  <p><strong>Source Code</strong>: https://github.com/lxdware/lxd-dashboard</p>
+  <p><strong>URL</strong>: https://lxdware.com</p>
 </body>
 </html>
