--- a/admin/cluster.html
+++ b/admin/cluster.html
@@ -138,6 +138,8 @@
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                   <h6 class="m-0 font-weight-bold text-primary">Cluster Members</h6>
+                  <div class="dropdown no-arrow">
+                  </div>
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
@@ -286,10 +288,7 @@
   }
 
   function reloadPageContent() {
-    $('#clusterMemberListTable').DataTable().ajax.reload();
-
-    //Set the page content to reload again in 5 more seconds
-    setTimeout(() => { reloadPageContent(); }, 5000);
+    $('#clusterMemberListTable').DataTable().ajax.reload(null, false);
   }
   
   function loadPageContent(){
@@ -320,8 +319,8 @@
     //Check for any running operations
     operationStatusCheck();
 
-    //Set the page content to reload once in 5 seconds
-    setTimeout(() => { reloadPageContent(); }, 5000);
+    //Set the page content to reload in 5 seconds
+    setInterval(() => { reloadPageContent(); }, 5000);
   }
 
 
