--- a/admin/images.html
+++ b/admin/images.html
@@ -139,10 +139,8 @@
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                   <h6 class="m-0 font-weight-bold text-primary">Images</h6>
                   <div class="dropdown no-arrow">
-                    <a class="dropdown-toggle" href="#" data-toggle="modal" data-target="#downloadImageModal">
-                      <i class="fas fa-plus fa-sm fa-fw"></i>
-                      Download Image
-                    </a>
+                    <a class="dropdown-toggle mr-2" href="#" data-toggle="modal" data-target="#downloadImageModal" title="Download Image" aria-hidden="true">
+                      <i class="fas fa-plus fa-sm fa-fw"></i> Image</a>
                   </div>
                 </div>
                 <!-- Card Body -->
@@ -343,7 +341,7 @@
   }
 
   function reloadPageContent() {
-    $('#imageListTable').DataTable().ajax.reload();
+    $('#imageListTable').DataTable().ajax.reload(null, false);
 
     //Load the select List for Download Image Modal
     $.get("./php/lxd/simplestreams-list-select.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName), function (data) {
@@ -352,9 +350,6 @@
         selectList = data;
       }
     });
-
-    //Set the page content to reload again in 5 more seconds
-    setTimeout(() => { reloadPageContent(); }, 5000);
   }
   
   function loadPageContent(){
@@ -392,8 +387,8 @@
     //Check for any running operations
     operationStatusCheck();
 
-    //Set the page content to reload once in 5 seconds
-    setTimeout(() => { reloadPageContent(); }, 5000);
+    //Set the page content to reload in 5 seconds
+    setInterval(() => { reloadPageContent(); }, 5000);
   }
     
   //API uses async
