--- a/admin/networks.html
+++ b/admin/networks.html
@@ -139,10 +139,8 @@
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                   <h6 class="m-0 font-weight-bold text-primary">Networks</h6>
                   <div class="dropdown no-arrow">
-                    <a class="dropdown-toggle" href="#" data-toggle="modal" data-target="#createNetworkModal">
-                      <i class="fas fa-plus fa-sm fa-fw"></i>
-                      New Network
-                    </a>
+                    <a class="dropdown-toggle mr-2" href="#" data-toggle="modal" data-target="#createNetworkModal" title="New Network" aria-hidden="true">
+                      <i class="fas fa-plus fa-sm fa-fw"></i> Network</a>
                   </div>
                 </div>
                 <!-- Card Body -->
@@ -387,10 +385,7 @@
   }
 
   function reloadPageContent() {
-    $('#networkListTable').DataTable().ajax.reload();
-
-    //Set the page content to reload again in 3 more seconds
-    setTimeout(() => { reloadPageContent(); }, 5000);
+    $('#networkListTable').DataTable().ajax.reload(null, false);
   }
 
   function loadPageContent(){
@@ -421,8 +416,8 @@
     //Check for any running operations
     operationStatusCheck();
 
-    //Set the page content to reload once in 5 seconds
-    setTimeout(() => { reloadPageContent(); }, 5000);
+    //Set the page content to reload in 5 seconds
+    setInterval(() => { reloadPageContent(); }, 5000);
   }
 
   //API uses sync
