--- a/admin/profiles.html
+++ b/admin/profiles.html
@@ -139,10 +139,8 @@
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                   <h6 class="m-0 font-weight-bold text-primary">Profiles</h6>
                   <div class="dropdown no-arrow">
-                    <a class="dropdown-toggle" href="#" data-toggle="modal" data-target="#createProfileModal">
-                      <i class="fas fa-plus fa-sm fa-fw"></i>
-                      New Profile
-                    </a>
+                    <a class="dropdown-toggle mr-2" href="#" data-toggle="modal" data-target="#createProfileModal" title="New Profile" aria-hidden="true">
+                      <i class="fas fa-plus fa-sm fa-fw"></i> Profile</a>
                   </div>
                 </div>
                 <!-- Card Body -->
@@ -386,10 +384,7 @@
   }
 
   function reloadPageContent(){
-    $('#profileListTable').DataTable().ajax.reload();
-
-    //Set the page content to reload again in 5 more seconds
-    setTimeout(() => { reloadPageContent(); }, 5000);
+    $('#profileListTable').DataTable().ajax.reload(null, false);
   }
   
   function loadPageContent(){
@@ -419,8 +414,8 @@
     //Check for any running operations
     operationStatusCheck();
 
-    //Set the page content to reload once in 5 seconds
-    setTimeout(() => { reloadPageContent(); }, 5000);
+    //Set the page content to reload in 5 seconds
+    setInterval(() => { reloadPageContent(); }, 5000);
   }
 
   //API uses sync
